# Minecraft_Clone

./: Cargo.toml  compile.bat
TextureData/: pack.mcmeta
src/: main.rs  vulkan_app.rs  vulkan_graphics_pipeline.rs  vulkan_presentation.rs  vulkan_setup.rs
src/settings_loader/: key_mappings.rs  mod.rs
src/shaders/: simple_shader.frag
src/utilities/: constants.rs  debug.rs  mod.rs  platform_utilities.rs  structures.rs  tools.rs
src/vulkan_engine/: buffers.rs  graphics_pipeline.rs  mod.rs  presentation.rs  setup.rs  vulkan_engine.rs
src/vulkan_engine/shaders/: simple_shader.vert
src/vulkan_engine/utilities/: constants.rs  debug.rs  platforms.rs  structures.rs  tools.rs
