[package]
name = "vulkan_minecraft_clone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.20.0"
ash = "0.29.0"
image = "0.22.0"
cgmath = "0.17.0"
memoffset = "0.5.1"
bincode = "1.3.3"
serde = {version= "1.0.136", features = ["derive"] }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.5", features = ["windef", "libloaderapi"] }